--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_PROJECTS_URL="http://localhost:3000/api/projects"
+VITE_PROJECTS_URL="https://kufi-immissionsschutz-azure-function.azurewebsites.net"
